# firetunnel

./: .gitignore  AppSettings.cpp  AppSettings.h  CMakeLists.txt  ConfigInspector.cpp  ConfigInspector.h  MainWindow.h  Makefile  README.md  conan_host_profile  helper_main.cpp  main.cpp  qt_trusttunnel_client.cpp  qt_trusttunnel_client.h
.github/workflows/: qt-client-build.yml  qt-client-configure.yml
assets/: app.qrc  logo.icns
include/core/: AppSettings.h  AppUiUtils.h  ConfigStore.h  NetworkAdapterManager.h  ProcessManager.h  UpdateChecker.h
include/ui/: ConfigWizard.h  ConnectionRing.h  MainWindow.h  SettingsDialog.h  TrafficGraph.h
include/vpn/: qt_trusttunnel_client.h
resources/styles/: claude.qss
src/core/: AppSettings.cpp  AppUiUtils.cpp  ConfigInspector.cpp  ConfigStore.cpp  NetworkAdapterManager.cpp  ProcessManager.cpp  UpdateChecker.cpp
src/ui/: ConfigWizard.cpp  ConnectionRing.cpp  MainWindow.cpp  SettingsDialog.cpp  TrafficGraph.cpp
src/vpn/: helper_main.cpp  qt_trusttunnel_client.cpp
win/: installer.nsi  trusttunnel-qt.manifest
